# candidate-ranking-engine

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_api.py  run_frontend.py  setup.cfg
api/: main.py  routes.py  schemas.py
api/db/: models.py  session.py
config/: settings.py
data/: skills_list.txt
data/sample_resumes/: alice_chen_resume.txt  bob_martinez_resume.txt  carol_kim_resume.txt  dave_wilson_resume.txt  eve_johnson_resume.txt  frank_lee_resume.txt  grace_taylor_resume.txt  henry_patel_resume.txt
data_processing/: pdf_extractor.py  text_cleaner.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  REORGANIZATION_LOG.md  VERIFICATION_REPORT.md
feature_engineering/: skill_extractor.py
frontend/: app.py
models/: ranker.py  semantic_scorer.py  tfidf_scorer.py  vector_store.py
scripts/: demo.py  setup_nlp_models.py  verify_phase_1.py
scripts/archive/: fetch_test_data.py  generate_sample_data.py  verify_phase_2.py  verify_phase_3.py  verify_phase_4.py  verify_phase_5.py
tests/: conftest.py  test_api.py  test_ranker.py  test_skill_extractor.py  test_text_cleaner.py  test_tfidf_scorer.py
utils/: file_utils.py  logger.py
