[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "candidate-ranking-engine"
version = "1.0.0"
description = "AI Resume Screening and Candidate Ranking System using classical NLP and local embeddings."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "KailasVS666", email = "sharjikailas@gmail.com"}
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "python-multipart>=0.0.9",
    "pydantic>=2.7.4",
    "streamlit>=1.35.0",
    "pdfplumber>=0.11.0",
    "pymupdf>=1.24.5",
    "pandas>=2.2.2",
    "scikit-learn>=1.5.0",
    "sentence-transformers>=3.0.0",
    "spacy>=3.7.5",
    "nltk>=3.8.1",
    "requests>=2.32.3",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.8",
    "mypy>=1.10.0"
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--verbose --cov=api --cov=models --cov=data_processing"
