[metadata]
name = candidate-ranking-engine
version = 1.0.0
description = Production-ready AI Resume Screening System
long_description = file: README.md
long_description_content_type = text/markdown
author = KailasVS666
author_email = sharjikailas@gmail.com
license = MIT

[options]
python_requires = >=3.11
packages = find:
include_package_data = True

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git,__pycache__,docs,venv

[mypy]
ignore_missing_imports = True
strict = False
allow_untyped_defs = True
